containers/k8s/kustomize/base/tundera-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tundera
  labels:
    app: tundera
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tundera
      tier: web
  template:
    metadata:
      labels:
        app: tundera
        tier: web
    spec:
      containers:
        - name: tundera-nextjs
          image: us.gcr.io/tundera-276902/tundera-nextjs:latest
          imagePullPolicy: Always
          ports:
            - name: 'http-port'
              containerPort: 3000
          resources:
            requests:
              memory: '1Gi'
              cpu: '250m'
            limits:
              memory: '1.25Gi'
              cpu: '500m'
        - name: tundera-website
          image: us.gcr.io/tundera-276902/tundera-website:latest
          imagePullPolicy: Always
          ports:
            - name: 'http-port'
              containerPort: 8000
          resources:
            requests:
              memory: '1Gi'
              cpu: '250m'
            limits:
              memory: '1.25Gi'
              cpu: '500m'
