containers/k8s/kustomize/base/tundera-graphql-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tundera-graphql-web-nodeport
  labels:
    app: tundera
spec:
  type: NodePort
  selector:
    app: tundera-graphql-web
    tier: web
  ports:
    - protocol: TCP
      port: 30003
      targetPort: 4000
