containers/k8s/kustomize/base/tundera-website-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: tundera-website-web-nodeport
  labels:
    app: website
spec:
  type: NodePort
  selector:
    app: tundera-website-web
    tier: web
  ports:
    - protocol: TCP
      port: 30002
      targetPort: 8000
